...
import UIKit

class AuthViewController: UIViewController {
    
// MARK: - UI -
    private let loginView: LoginView = LoginView()
    private let registerView: ChangeUserDataView = ChangeUserDataView()
    
// MARK: - Properties -
    private let di: DI!
    var output: AuthViewOutput!
    
// MARK: - Life cycle -
...
